<resources>
    <string name="app_name">Datebook</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_on">Sign on</string>
    <string name="error_invalid_sign_on">Can\'t sign on</string>
    <string name="alert_valid_sign_on">Successful sign on</string>
    <string name="alert_valid_sign_on_body">You are now registered</string>
    <string name="error_invalid_username">This username is already in use</string>
    <string name="error_invalid_sign_in">Can\'t sign in</string>
    <string name="error_sign_in">The password is incorrect</string>
    <string name="error_username">The user does not exist</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_erase">Erase event</string>
    <string name="prompt_close_dialog">Close</string>
    <string name="event_dialog_title">Event details</string>
    <string name="event_dialog_name">Name</string>
    <string name="event_dialog_place">Place</string>
    <string name="event_dialog_date">Date</string>
    <string name="colon_space">: </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="createevent_title">Create event</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_place">Place</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_submit">Submit</string>
    <string name="event_info">Event details</string>
    <string name="main_title">Events</string>
    <string name="prompt_search">Search</string>
    <string name="prompt_login_title">Sign In</string>
    <string name="error_date">The date is incorrect</string>
    <string name="error_date_title">Date error</string>
    <string-array name="days_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_array">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>

    </string-array>
</resources>
